Update project name to gm-checkin-miniapp
- Changed repository name from gm-checkin-app to gm-checkin-miniapp
- Updated package.json, README.md, and HTML title
- Prepared for Farcaster MiniApp deployment

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gm-checkin-app",
+  "name": "gm-checkin-miniapp",
   "version": "1.0.0",
-  "description": "GM Daily Check-in App on Base Chain",
+  "description": "GM Daily Check-in MiniApp for Farcaster on Base Chain",
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
